--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,229 @@
-@use '../../styles/variables' as v;
+@import '../../styles/variables';
 
-.App {
-  text-align: center;
+.app {
+  font-family: 'Roboto', sans-serif;
+
+  &__searchbar {
+    background-image: url('../../assets/img/home-background.jpg');
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    text-align: center;
+
+    .app__title {
+      color: $color-ElectricCyan;
+      font-size: 2rem;
+      padding-top: 20vh;
+      padding-bottom: 20px;
+    }
+
+    .app__input {
+      width: 50%;
+      padding: 10px;
+      border: none;
+      border-radius: 10px;
+      font-size: 1rem;
+    }
+
+    .app__button {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 10px;
+      font-size: 1rem;
+      margin-left: 10px;
+      cursor: pointer;
+      transition: all 0.3s;
+
+      &:hover {
+        background: $color-DeepPurple;
+        color: $color-ElectricCyan;
+      }
+    }
+  }
+
+  &__games {
+    display: flex;
+    gap: 20px;
+    max-width: 1400px;
+    margin: 50px auto;
+
+    .app__games-figure {
+      width: 250px;
+      height: 250px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .app__games-container {
+      font-size: 1.3rem;
+      padding: 40px;
+      width: 100%;
+      background: $color-bg;
+      color: $color-DeepPurple;
+      border-radius: 10px;
+      text-align: right;
+
+      .app__games-title {
+        font-size: 2rem;
+        margin-bottom: 20px;
+      }
+      .app__games-description {
+        font-size: 1.2rem;
+      }
+    }
+  }
+
+  &__step {
+    max-width: 1400px;
+    margin: 50px auto;
+    background: $color-bg;
+    border-radius: 10px;
+    color: $color-DeepPurple;
+    padding: 20px;
+    margin: 20px auto;
+
+    .app__step-title {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .app__step-list {
+      display: flex;
+      justify-content: center;
+      gap: 50px;
+      padding: 20px;
+      font-size: 1.2rem;
+    }
+
+    .app__step-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 30px;
+
+      .app__step-item-number {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 90px;
+        height: 90px;
+        font-size: 2.4rem;
+        background: #ffc0cb;
+        border-radius: 50%;
+        font-family: 'Press Start 2P';
+      }
+
+      .app__step-item-title {
+        font-size: 1.5rem;
+      }
+
+      .app__step-item-description {
+        font-size: 1rem;
+      }
+    }
+  }
+
+  &__reviews {
+    max-width: 1400px;
+    margin: 50px auto;
+    padding: 20px;
+    background: $color-bg;
+    border-radius: 10px;
+    color: #000000;
+    display: flex;
+    gap: 20px;
+
+    .app__reviews-card {
+      padding: 20px;
+      margin: 30px;
+      border-radius: 10px;
+      background: #ffc0cb;
+    }
+  }
+  .app__reviews-rightarrow,
+  .app__reviews-leftarrow {
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+
+  &__annonce {
+    max-width: 1400px;
+    margin: 50px auto;
+    padding: 20px;
+    background: $color-bg;
+    border-radius: 10px;
+    color: $color-DeepPurple;
+    display: flex;
+
+    .app__annonce-description {
+      font-size: 1.5rem;
+      padding: 40px;
+      text-align: left;
+    }
+
+    .app__annonce-button {
+      background: none;
+      cursor: pointer;
+      padding: 50px;
+      width: 50%;
+      font-size: 3rem;
+      border-radius: 10px;
+      border: none;
+
+      &:hover {
+        background: $color-DeepPurple;
+        color: $color-ElectricCyan;
+      }
+    }
+  }
+}
+
+// (max-width: 975px)
+// (max-width: 700px)
+// (max-width: 375px)
+
+@media screen and (max-width: 975px) {
+  .app__searchbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .app__games {
+    max-width: 800px;
+    margin: 50px auto;
+  }
+
+  .app__step {
+    max-width: 800px;
+    margin: 50px auto;
+  }
+
+  .app__step-list {
+    flex-direction: column;
+  }
+
+  .app__reviews {
+    max-width: 800px;
+    margin: 50px auto;
+  }
+
+  .app__annonce {
+    max-width: 800px;
+    margin: 50px auto;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 700px) {
+}
+
+@media screen and (max-width: 300px) {
+  .app__games-images-container {
+    display: none;
+  }
 }
