--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -227,3 +227,30 @@
     display: none;
   }
 }
+@media screen and (max-width: 975px) {
+  .app__games {
+      max-width: 800px;
+      margin: 50px auto;
+      display: flex;
+      flex-direction: column;
+  }
+}
+@media screen and (max-width: 975px) {
+  .app__reviews {
+      max-width: 800px;
+      margin: 50px auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  .app__games-images-container{
+    display: flex;
+    justify-content: center;
+  }
+  .app__games-container{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
