Co-authored-by: Jeremygrlt <Jeremygrlt@users.noreply.github.com> Co-authored-by: Charlie Gauvin <Charlie-Gauvin@users.noreply.github.com> Co-authored-by: alexandrehamedOC <alexandrehamedOC@users.noreply.github.com>

--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -2,7 +2,7 @@
 
 .profile_container {
   display: flex;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .profile_sidebar {
@@ -82,4 +82,41 @@
   display: flex;
   justify-content: space-around;
   margin-top: 25px;
+}
+
+.ranks-list {
+  display: flex;
+  padding: 0.5em 0;
+}
+
+.ranks-list .left {
+  display: flex;
+  width: 50%;
+}
+
+.ranks-list .left p {
+  padding: 5px 8px;
+  background-color: #cbcaca;
+  border-radius: 15px;
+  margin-inline: 5px;
+  width: 33%;
+}
+
+.ranks-list p:first-child {
+  padding: 5px 8px;
+  background-color: #1d0101;
+  color: #fff;
+  border-radius: 15px;
+  margin-inline: 5px;
+}
+
+.ranks-list-desc {
+  width: 50%;
+}
+
+.ranks-list-desc {
+  padding: 5px 8px;
+  background-color: #cbcaca;
+  border-radius: 15px;
+  margin-inline: 5px;
 }
