--- a/src/components/Profil/profilAnnonce/profilAnnonce.scss
+++ b/src/components/Profil/profilAnnonce/profilAnnonce.scss
@@ -1,41 +1,43 @@
 @import '../../../styles/variables';
 
-.profilAnnonce_container{
-  font-family: "Roboto", sans-serif;
-  max-width: 100%;
-  margin:10px;
-  padding:10px;
+.profilAnnonce_container {
+  font-family: 'Roboto', sans-serif;
+  width: 65%;
+  margin: 10px;
   background-color: #f4f4f4;
   display: flex;
   overflow-x: auto;
 }
+.profilAnnonce_container .annonce_box {
+  border: solid 5px white;
+}
 
-.profilAnnonce_title{
+.profilAnnonce_title {
   color: $color-bg;
   display: flex;
   justify-content: center;
 }
 
-.profilAnnonce_games{
+.profilAnnonce_games {
   display: flex;
   font-size: 1.2rem;
   gap: 50px;
   margin: 30px;
   color: $color-bg;
 }
-.profilAnnonce_description{
+.profilAnnonce_description {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 5px;
   background-color: #f4f4f4;
 
-   p {
+  p {
     margin: 25px;
-    }
+  }
 }
 
-.profilAnnonce_rank{
+.profilAnnonce_rank {
   display: flex;
   gap: 50px;
   margin: 30px;
@@ -43,17 +45,17 @@
   font-size: 1.2rem;
 }
 
-.profilAnnonce_schedule-status{
+.profilAnnonce_schedule-status {
   color: $color-bg;
   margin: 30px;
-  font-size: 1,2rem;
+  font-size: 1, 2rem;
   display: flex;
   justify-content: space-between;
 
-      .profilAnnonce_status{
-        background-color: red;
-        color: $color-bg;
-        margin: 15px;
-        padding: 10px;
+  .profilAnnonce_status {
+    background-color: red;
+    color: $color-bg;
+    margin: 15px;
+    padding: 10px;
   }
 }
