mail ok, must add front notif

--- a/src/components/forgotPassword/sendMailForgotPassword/sendMailForgotPassword.scss
+++ b/src/components/forgotPassword/sendMailForgotPassword/sendMailForgotPassword.scss
@@ -39,9 +39,26 @@
       &:hover{
         background-color: black;
         color: white;
+        cursor: pointer;
       }
     }
   }
+}
+
+.notification {
+  margin-top: 20px;
+  padding: 10px;
+  border-radius: 5px;
+  text-align: center;
+  color: white;
+}
+
+.notification.success {
+  background-color: green;
+}
+
+.notification.error {
+  background-color: red;
 }
 
 
