--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -29,7 +29,7 @@
 
 .profile_sidebar button {
   display: block;
-  width: 100%;
+  // width: 100%;
   margin: 10px 0;
   padding: 10px;
   background-color: $color-bg;
