--- a/src/components/forgotPassword/formNewPassword/formNewPassword.scss
+++ b/src/components/forgotPassword/formNewPassword/formNewPassword.scss
@@ -15,6 +15,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    justify-content: center;
 
     label {
       font-size: 2.5vh;
@@ -56,7 +57,7 @@
 
 .notification--success {
   background-color: green;
-  border: 2px solid green
+  border: 2px solid green;
 }
 
 .notification--error {
