--- a/src/components/SignIn/SignIn.scss
+++ b/src/components/SignIn/SignIn.scss
@@ -18,7 +18,7 @@
 
 .SignIn__img img {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 10px;
 }
 
@@ -69,4 +69,14 @@
 .form-group input[type="date"] {
   width: 100%;
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1000px) {
+  .SignIn__img{
+    display: none;
+  }
+
+  .SignIn__form{
+    width: 100%;
+  }
 }
