--- a/src/components/forgotPassword/sendMailForgotPassword/sendMailForgotPassword.scss
+++ b/src/components/forgotPassword/sendMailForgotPassword/sendMailForgotPassword.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 20vh;
+  margin: 20vh;
   .main__title {
     font-size: 50px;
   }
@@ -29,7 +29,7 @@
     }
     button {
       margin-top: 5vh;
-      width: 15vh;
+      width: 25vh;
       height: 3vh;
       border: 0;
       transition: 0.4s ease-in-out;
