--- a/src/components/Profil/EditProfil/EditProfil.scss
+++ b/src/components/Profil/EditProfil/EditProfil.scss
@@ -1,28 +1,116 @@
 .edit {
-  border: 2px solid pink;
-  gap: 100px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 
   &__card {
     display: flex;
-    justify-content: end;
-    gap: 100px;
+    gap: 25px;
+    width: 250px;
+    border: 1px solid black;
+    padding: 1em;
 
     .edit__profile-card {
-      border: 2px solid purple;
       display: flex;
-      width: 50vh;
+      flex-direction: column;
+      justify-content: space-between;
+      border: 1 px solid black;
+    }
+
+    .edit__profile-card-info {
+      display: flex;
+      justify-content: space-between;
     }
   }
 
   &__form {
-    border: 2px solid blue;
-    display: flex;
-    justify-content: end;
-    gap: 25px;
-    margin-top: 25px;
+    width: 100%;
+    justify-content: center;
+    height: 47%;
+    background-color: lightgray;
 
     .edit__form-label {
       color: black;
     }
   }
+}
+
+.edit__title {
+  padding-left: 20px;
+}
+
+.edit__profile-card-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+.edit__profile-card-buttons button,
+.create__form-button,
+.update__form-button {
+  background-color: black;
+  color: antiquewhite;
+  border: none;
+  box-shadow: none;
+  padding: 0.2em 1em;
+}
+
+.edit__profile {
+  display: flex;
+  justify-content: start;
+  gap: 25px;
+  margin-left: 20px;
+  overflow-x: auto;
+  padding-bottom: 10px;
+}
+
+form {
+  display: flex;
+  gap: 10px;
+  margin-top: 25px;
+  flex-wrap: wrap;
+}
+
+.edit__form-main {
+  height: 250px;
+  width: 300px;
+}
+
+.edit__form-side {
+  height: 250px;
+  width: 400px;
+}
+
+form textarea {
+  width: 100%;
+  height: 180px;
+}
+
+.edit__form-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.edit__form-buttons {
+  margin-top: 2em;
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.profile_container {
+  width: 100%;
+}
+
+.create__form-button,
+.update__form-button {
+  background-color: black;
+  color: antiquewhite;
+  border: none;
+  box-shadow: none;
+  padding: 0.2em 2em;
+}
+
+@media screen and (max-width: 1024px) {
 }
