--- a/src/components/Profil/Profil.scss
+++ b/src/components/Profil/Profil.scss
@@ -5,16 +5,6 @@
   font-family: 'Roboto', sans-serif;
 }
 
-.profile_sidebar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 100vh;
-  width: 20%;
-  padding: 20px;
-  background-color: #f4f4f4;
-}
-
 .profile_picture {
   width: 100px;
   height: 100px;
@@ -23,23 +13,8 @@
   margin-bottom: 20px;
 }
 
-.profile_sidebar p {
-  margin: 10px 0;
-}
-
-.profile_sidebar button {
-  display: block;
-  // width: 100%;
-  margin: 10px 0;
-  padding: 10px;
-  background-color: $color-bg;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
 .profile_main {
-  width: 75%;
+  width: 80%;
   padding: 20px;
 }
 
@@ -89,6 +64,10 @@
   padding: 0.5em 0;
 }
 
+.ranks-list .left p {
+  align-items: center;
+}
+
 .ranks-list .left {
   display: flex;
   width: 50%;
@@ -100,6 +79,7 @@
   border-radius: 15px;
   margin-inline: 5px;
   width: 33%;
+  display: flex;
 }
 
 .ranks-list p:first-child {
@@ -108,10 +88,12 @@
   color: #fff;
   border-radius: 15px;
   margin-inline: 5px;
+  align-items: center;
 }
 
 .ranks-list-desc {
   width: 50%;
+  align-content: center;
 }
 
 .ranks-list-desc {
