--- a/src/components/Profil/profilAnnonce/profilAnnonce.scss
+++ b/src/components/Profil/profilAnnonce/profilAnnonce.scss
@@ -3,7 +3,8 @@
 .profilAnnonce_container {
   font-family: 'Roboto', sans-serif;
   width: 65%;
-  margin: 10px;
+  margin: 15px;
+  padding: 10px;
   background-color: #f4f4f4;
   display: flex;
   overflow-x: auto;
@@ -58,4 +59,8 @@
     margin: 15px;
     padding: 10px;
   }
+}
+
+.card_profil_annonce {
+  width: 33%;
 }
