--- a/src/components/Profil/EditAnnonce/EditAnnonce.scss
+++ b/src/components/Profil/EditAnnonce/EditAnnonce.scss
@@ -24,12 +24,12 @@
   gap: 1.5em;
 }
 
-form {
+.edit__form_annonce {
   justify-content: space-between;
   height: 100%;
 }
 
-form label {
+.edit__form_annonce label {
   color: black;
 }
 
