--- a/src/components/SignIn/SignIn.scss
+++ b/src/components/SignIn/SignIn.scss
@@ -27,6 +27,14 @@
   padding: 0 20px;
 }
 
+.SignIn__form form{
+  display: flex;
+  gap: 10px;
+  margin-top: 25px;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
 .SignIn__form h1 {
   text-align: center;
   margin-bottom: 20px;
