Forgot et Reset OK

--- a/src/components/forgotPassword/sendMailForgotPassword/sendMailForgotPassword.scss
+++ b/src/components/forgotPassword/sendMailForgotPassword/sendMailForgotPassword.scss
@@ -1,38 +1,46 @@
-.main__container {
+.sendMail_main__container {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 20vh;
-  .main__title {
-    font-size: 50px;
-  }
+  margin: 25px;
+
   p {
-    margin-top: 10px;
-    margin-bottom: 40px;
     font-size: 1.5vh;
   }
-  .login__form {
+
+  .sendMail_login__form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    margin: 10px;
+  }
+
+  .sendMail_login__form {
     display: flex;
     align-items: center;
     flex-direction: column;
+    gap: 10px;
 
     label {
       font-size: 2.5vh;
       color: black;
-      margin-right: 5vh;
+      text-align: center;
     }
+
     input {
       height: 5vh;
       font-size: 2.5vh;
       border-radius: 15px;
       padding: 10px;
     }
+
     button {
-      margin-top: 5vh;
       width: 25vh;
       height: 3vh;
       border: 0;
       transition: 0.4s ease-in-out;
+
       &:hover {
         background-color: black;
         color: white;
@@ -40,6 +48,10 @@
       }
     }
   }
+}
+
+.sendMail_main__title {
+  font-size: 50px;
 }
 
 .notification {
@@ -52,16 +64,16 @@
   animation: fadeIn 1s;
   transition: 0.5s ease-in-out;
   cursor: pointer;
-}
 
-.notification--success {
-  background-color: green;
-  border: 2px solid green
-}
+  &--success {
+    background-color: green;
+    border: 2px solid green;
+  }
 
-.notification--error {
-  background-color: red;
-  border: 2px solid red;
+  &--error {
+    background-color: red;
+    border: 2px solid red;
+  }
 }
 
 @keyframes fadeIn {
@@ -70,5 +82,86 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .sendMail_main__title {
+    font-size: 25px;
+  }
+
+  .sendMail_main__container {
+    margin: 10vh;
+
+    p {
+      font-size: 2vh;
+    }
+
+    .sendMail_login__form {
+      label,
+      input {
+        font-size: 2vh;
+      }
+
+      button {
+        width: 20vh;
+        height: 4vh;
+        font-size: 2vh;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .sendMail_main__title {
+    font-size: 20px;
+  }
+
+  .sendMail_main__container {
+    margin: 5vh;
+
+    p {
+      font-size: 1.8vh;
+    }
+
+    .sendMail_login__form {
+      label,
+      input {
+        font-size: 1.8vh;
+      }
+
+      button {
+        width: 18vh;
+        height: 5vh;
+        font-size: 1.8vh;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .sendMail_main__title {
+    font-size: 15px;
+  }
+
+  .sendMail_main__container {
+    margin: 2vh;
+
+    p {
+      font-size: 1.5vh;
+    }
+
+    .sendMail_login__form {
+      label,
+      input {
+        font-size: 1.5vh;
+      }
+
+      button {
+        width: 15vh;
+        height: 6vh;
+        font-size: 1.5vh;
+      }
+    }
   }
 }
