--- a/src/components/Profil/Review/Review.scss
+++ b/src/components/Profil/Review/Review.scss
@@ -1,4 +1,5 @@
 @import '../../../styles/variables';
+
 .review_annonce {
   width: 100%;
   max-height: 500px;
@@ -31,6 +32,7 @@
     box-shadow: none;
     border: none;
     padding: 0.1em 0.8em;
+    cursor: pointer;
   }
 }
 .review_rate-container {
@@ -90,4 +92,63 @@
   color: black;
   box-shadow: none;
   padding: 0.3em 0;
+  cursor: pointer;
+}
+
+// ------------------------------- Style du review Form -------------------------------------- //
+
+.review__title {
+  display: flex;
+  justify-content: center;
+  font-size: 1.7rem;
+  margin-bottom: 10px;
+  color: $color-DeepPurple;
+  padding: 10px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  gap: 15px;
+
+  .form__note-input {
+    width: 45px;
+  }
+
+  label {
+    font-size: 1.2rem;
+    color: $color-DeepPurple;
+    margin-bottom: 5px;
+    display: flex;
+  }
+
+  textarea {
+    width: 100%;
+    // min-width: 200px;
+    // max-width: 400px;
+    // min-height: 100px;
+    // max-height: 200px;
+    resize: none;
+  }
+
+  .form_button-submit {
+    background-color: $color-DeepPurple;
+    color: white;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    transition: background-color 0.3s;
+    margin-top: 10px;
+    border-radius: 5px;
+    font-size: 1.5rem;
+
+    &:hover {
+      background-color: $color-DeepPurple;
+      color: $color-DeepPurple;
+      background-color: $color-bg;
+      border: 2px solid $color-DeepPurple;
+    }
+  }
 }
