--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $color-NeonPink: #ff6ec7;
 $color-ElectricCyan: #00ffff;
 $color-DeepPurple: #8d00ff;
 $color-bg: #1a1a1a;
+$color-white: #ffffff;
 
 
 $image-path: '../../assets/img/error.jpg';
