--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -25,6 +25,7 @@
   right: 10px;
   background: none;
   border: none;
-  font-size: 16px;
+  font-size: 12px;
   cursor: pointer;
+  padding: 0.3em;
 }
