--- a/src/components/Profil/SideBar/Sidebar.scss
+++ b/src/components/Profil/SideBar/Sidebar.scss
@@ -16,12 +16,14 @@
 
 .profile_sidebar button {
   display: block;
-  // width: 100%;
   margin: 10px 0;
-  padding: 10px;
   background-color: $color-bg;
   color: #fff;
   border: none;
   cursor: pointer;
+}
+
+.left-buttons {
   width: 150px;
+  padding: 10px;
 }
