--- a/src/components/Profil/EditProfil/EditProfil.scss
+++ b/src/components/Profil/EditProfil/EditProfil.scss
@@ -4,23 +4,43 @@
   flex-direction: column;
   justify-content: space-evenly;
 
+  &__title {
+    font-size: 2rem;
+  }
+
   &__card {
     display: flex;
     gap: 25px;
     width: 250px;
-    border: 1px solid black;
+    border: 2px solid black;
+    border-radius: 10px;
     padding: 1em;
 
     .edit__profile-card {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      border: 1 px solid black;
-    }
 
-    .edit__profile-card-info {
-      display: flex;
-      justify-content: space-between;
+      .edit__profile-card-buttons {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .edit__profile-card-info {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .edit__profile-card-buttons button,
+      .create__form-button,
+      .update__form-button {
+        background-color: black;
+        color: antiquewhite;
+        border: none;
+        box-shadow: none;
+        padding: 0.2em 1em;
+        cursor: pointer;
+      }
     }
   }
 
@@ -38,21 +58,6 @@
 
 .edit__title {
   padding-left: 20px;
-}
-
-.edit__profile-card-buttons {
-  display: flex;
-  justify-content: space-between;
-}
-
-.edit__profile-card-buttons button,
-.create__form-button,
-.update__form-button {
-  background-color: black;
-  color: antiquewhite;
-  border: none;
-  box-shadow: none;
-  padding: 0.2em 1em;
 }
 
 .edit__profile {
@@ -84,6 +89,7 @@ form {
 form textarea {
   width: 100%;
   height: 180px;
+  resize: none;
 }
 
 .edit__form-group {
