--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,7 @@ $color-ElectricCyan: #00ffff;
 $color-DeepPurple: #8d00ff;
 $color-bg: #1a1a1a;
 $color-white: #ffffff;
+$color-alternative-purple : #931ace;
 
 
 $image-path: '../../assets/img/error.jpg';
