--- a/src/components/Profil/EditAnnonce/EditAnnonce.scss
+++ b/src/components/Profil/EditAnnonce/EditAnnonce.scss
@@ -3,7 +3,6 @@
     display: flex;
     justify-content: end;
     gap: 100px;
-
     .edit__profile-card {
       display: flex;
       width: 50vh;
@@ -11,12 +10,14 @@
   }
 
   &__form {
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: 2em;
-    gap: 25px;
-    margin-top: 25px;
-    color: black;
+    width: 100%;
+    justify-content: center;
+    height: 47%;
+    background-image: url('../../../assets/img/background-images/Designer.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
   }
 }
 
@@ -26,25 +27,51 @@
   gap: 1.5em;
 }
 
+.edit__form-left div {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
 .edit__form_annonce {
-  justify-content: space-between;
+  width: 70%;
+  justify-content: center;
+  background-color: transparent;
+  display: flex;
+  gap: 30px;
+  flex-wrap: wrap;
+  margin: 0 auto;
   height: 100%;
+}
+
+.edit__form-button {
+  margin-top: 2em;
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+input,
+select {
+  background: transparent;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  padding: 0.5em;
 }
 
 .edit__form_annonce label {
   color: black;
 }
-
 .schedule_inputs {
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
-
 .schedule_inputs input {
   width: 50%;
 }
-
 .edit__form-button {
   background-color: black;
   color: white;
@@ -52,7 +79,6 @@
   box-shadow: none;
   padding-block: 0.3em;
 }
-
 .edit__form {
   padding: 2em 0;
 }
