--- a/src/components/Profil/EditProfil/EditProfil.scss
+++ b/src/components/Profil/EditProfil/EditProfil.scss
@@ -13,136 +13,119 @@
     display: flex;
     gap: 25px;
     width: 250px;
-
     border: 1px solid black;
     border-radius: 10px;
     padding: 0.7rem;
 
     filter: drop-shadow(1px 2px 0.2rem gray);
 
-
     .edit__profile-card {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
 
+      .edit__profile-card-info {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
 
-    .edit__profile-card-info {
-      display: flex;
-      justify-content: space-between;
+    &__form {
+      width: 100%;
+      justify-content: center;
+      height: 47%;
+      background-image: url('../../../assets/img/background-images/Designer.jpeg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      position: relative;
+
+      .edit__form-label {
+        color: black;
+      }
     }
   }
-
-  &__form {
-    width: 100%;
+  .edit__form-label {
+    color: black;
+  }
+  .edit__form_profil {
+    width: 50%;
     justify-content: center;
-    height: 47%;
-
-    background-image: url('../../../assets/img/background-images/Designer.jpeg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-
-    .edit__form-label {
-      color: black;
-
-    }
+    background-color: transparent;
+    display: flex;
+    gap: 10px;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    height: 100%;
   }
-}
 
-.edit__form-label {
-  color: black;
-}
+  .edit__profile-card-buttons button,
+  .create__form-button,
+  .update__form-button {
+    padding: 0.2em 1em;
+  }
 
-.edit__form_profil {
-  width: 100%;
-  justify-content: center;
-  height: 47%;
-  background-color: lightgray;
-  display: flex;
-  gap: 10px;
-  margin-top: 25px;
-  flex-wrap: wrap;
-}
+  .edit__profile {
+    display: flex;
+    justify-content: start;
+    gap: 25px;
+    margin-left: 20px;
+    overflow-x: auto;
+    padding-bottom: 10px;
+  }
 
+  form {
+    display: flex;
+    gap: 10px;
+    margin-top: 25px;
+    flex-wrap: wrap;
+    background-color: transparent;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(15px);
+    padding: 1rem;
+    border-radius: 10px;
+  }
 
-.edit__profile-card-buttons button,
-.create__form-button,
-.update__form-button {
-  background-color: black;
-  color: antiquewhite;
-  border-radius: 10px;
-  border: none;
-  box-shadow: none;
-  padding: 0.2em 1em;
+  .edit__form-main {
+    position: relative;
+    height: 250px;
+    width: 300px;
+  }
+  .edit__form-side {
+    height: 250px;
+    width: 400px;
+  }
+  form textarea {
+    width: 100%;
+    height: 180px;
+    resize: none;
+  }
+  .edit__form-group {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.5em 0;
+  }
 
-}
-
-.edit__profile {
-  display: flex;
-  justify-content: start;
-  gap: 25px;
-  margin-left: 20px;
-  overflow-x: auto;
-  padding-bottom: 10px;
-}
-
-
-form {
-  display: flex;
-  gap: 10px;
-  margin-top: 25px;
-  flex-wrap: wrap;
-  background-color: transparent;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(15px);
-  padding: 1rem;
-  border-radius: 10px;
-}
-
-
-.edit__form-main {
-  position: relative;
-  height: 250px;
-  width: 300px;
-}
-
-.edit__form-side {
-  height: 250px;
-  width: 400px;
-}
-
-form textarea {
-  width: 100%;
-  height: 180px;
-  resize: none;
-}
-
-.edit__form-group {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.edit__form-buttons {
-  margin-top: 2em;
-  display: flex;
-  justify-content: space-around;
-  gap: 10px;
-}
-
-.profile_container {
-  width: 100%;
-}
-
-.create__form-button,
-.update__form-button {
-  background-color: black;
-  color: antiquewhite;
-  border: none;
-  box-shadow: none;
-  padding: 0.2em 2em;
+  .edit__form-select,
+  .edit__form-textarea {
+    background: transparent;
+    outline: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    color: #fff;
+    padding: 0.5em;
+  }
+  .edit__form-buttons,
+  .edit__profile-card-buttons {
+    margin-top: 2em;
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+  }
+  .profile_container {
+    width: 100%;
+  }
 }
 
 button {
@@ -158,12 +141,14 @@ button {
   background: var(--bg);
   transition: 0.2s;
 }
+
 button:hover {
   color: var(--hover-text);
   transform: translate(-0.25rem, -0.25rem);
   background: var(--hover-bg);
   box-shadow: 0.25rem 0.25rem var(--bg);
 }
+
 button:active {
   transform: translate(0);
   box-shadow: none;
@@ -172,13 +157,14 @@ button:active {
 input {
   background: transparent;
   outline: none;
-  border: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
   color: #fff;
+  padding: 0.5em;
 }
+
 ::placeholder {
   color: #fff;
   text-decoration: none;
   font-weight: 600;
-}
-@media screen and (max-width: 768px) {
 }
