--- a/src/components/Profil/EditAnnonce/EditAnnonce.scss
+++ b/src/components/Profil/EditAnnonce/EditAnnonce.scss
@@ -1,3 +1,7 @@
+.profile_container {
+  display: flex;
+}
+
 .edit {
   &__card {
     display: flex;
@@ -19,6 +23,15 @@
     background-repeat: no-repeat;
     position: relative;
   }
+}
+
+.edit__profile {
+  display: flex;
+  justify-content: start;
+  gap: 25px;
+  margin-left: 20px;
+  overflow-x: auto;
+  padding-bottom: 10px;
 }
 
 .edit__form-left {
@@ -49,6 +62,11 @@
   display: flex;
   justify-content: space-around;
   gap: 10px;
+  background-color: black;
+  color: white;
+  border: none;
+  box-shadow: none;
+  padding-block: 0.3em;
 }
 
 input,
@@ -72,13 +90,7 @@ select {
 .schedule_inputs input {
   width: 50%;
 }
-.edit__form-button {
-  background-color: black;
-  color: white;
-  border: none;
-  box-shadow: none;
-  padding-block: 0.3em;
-}
+
 .edit__form {
   padding: 2em 0;
 }
