--- a/src/components/Profil/EditProfil/EditProfil.scss
+++ b/src/components/Profil/EditProfil/EditProfil.scss
@@ -1,3 +1,7 @@
+.profile_container {
+  display: flex;
+}
+
 .edit {
   width: 80%;
   display: flex;
@@ -29,22 +33,23 @@
         justify-content: space-between;
       }
     }
+  }
 
-    &__form {
-      width: 100%;
-      justify-content: center;
-      height: 47%;
-      background-image: url('../../../assets/img/background-images/Designer.jpeg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      position: relative;
+  &__form {
+    width: 100%;
+    justify-content: center;
+    height: 47%;
+    background-image: url('../../../assets/img/background-images/Designer.jpeg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
 
-      .edit__form-label {
-        color: black;
-      }
+    .edit__form-label {
+      color: black;
     }
   }
+
   .edit__form-label {
     color: black;
   }
