--- a/src/components/Profil/EditAnnonce/EditAnnonce.scss
+++ b/src/components/Profil/EditAnnonce/EditAnnonce.scss
@@ -1,15 +1,33 @@
 .profile_container {
   display: flex;
+  width: 100%;
 }
 
 .edit {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  &__title {
+    font-size: 2rem;
+  }
+
   &__card {
+    font-weight: bold;
     display: flex;
-    justify-content: end;
-    gap: 100px;
+    gap: 25px;
+    width: 250px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 0.7rem;
+
+    filter: drop-shadow(1px 2px 0.2rem gray);
+
     .edit__profile-card {
       display: flex;
-      width: 50vh;
+      flex-direction: column;
+      justify-content: space-between;
     }
   }
 
@@ -22,7 +40,33 @@
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+
+    form {
+      display: flex;
+      gap: 10px;
+      margin-top: 25px;
+      flex-wrap: wrap;
+      background-color: transparent;
+      border: 2px solid rgba(255, 255, 255, 0.5);
+      backdrop-filter: blur(15px);
+      padding: 1rem;
+      border-radius: 10px;
+    }
   }
+}
+
+.edit__profile-card-buttons button,
+.create__form-button,
+.update__form-button {
+  padding: 0.2em 1em;
+}
+
+.edit__form-buttons,
+.edit__profile-card-buttons {
+  margin-top: 2em;
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
 }
 
 .edit__profile {
@@ -51,7 +95,7 @@
   justify-content: center;
   background-color: transparent;
   display: flex;
-  gap: 30px;
+  gap: 10px;
   flex-wrap: wrap;
   margin: 0 auto;
   height: 100%;
@@ -91,12 +135,72 @@ select {
   width: 50%;
 }
 
-.edit__form {
-  padding: 2em 0;
+.edit__form-main {
+  position: relative;
+  height: 250px;
+  width: 300px;
 }
-.edit__form-textarea {
+.edit__form-side {
+  height: 250px;
+  width: 400px;
+}
+form textarea {
+  width: 100%;
+  height: 180px;
   resize: none;
 }
+
+.edit__form-select,
+.edit__form-textarea {
+  background: transparent;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  padding: 0.5em;
+}
+
+button {
+  border-radius: 10px;
+  --bg: #000;
+  --hover-bg: #00ffff;
+  --hover-text: #000;
+  color: #fff;
+  cursor: pointer;
+  border: 1px solid var(--bg);
+  border-radius: 4px;
+  padding: 0.8em 2em;
+  background: var(--bg);
+  transition: 0.2s;
+}
+
+button:hover {
+  color: var(--hover-text);
+  transform: translate(-0.25rem, -0.25rem);
+  background: var(--hover-bg);
+  box-shadow: 0.25rem 0.25rem var(--bg);
+}
+
+button:active {
+  transform: translate(0);
+  box-shadow: none;
+}
+
+input {
+  background: transparent;
+  outline: none;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  color: #fff;
+  padding: 0.5em;
+}
+
+::placeholder {
+  color: #fff;
+  text-decoration: none;
+  font-weight: 600;
+}
+
 @media screen and (max-width: 768px) {
   .edit__form {
     padding: 1em 0;
