--- a/src/components/Annonce/Annonce.scss
+++ b/src/components/Annonce/Annonce.scss
@@ -52,6 +52,7 @@
       }
 
       select {
+        background-color: #1a1a1a;
         padding: 10px;
         width: 100%;
       }
@@ -60,12 +61,13 @@
         display: flex;
         width: 100%;
         justify-content: center;
+        color: antiquewhite;
       }
 
       .search_section_buttons button {
         padding: 0.2em 1em;
         background-color: $color-bg;
-        color: white;
+        color: antiquewhite;
         border: none;
         text-align: center;
         cursor: pointer;
@@ -73,6 +75,10 @@
           color: $color-NeonPink;
         }
       }
+    }
+
+    #games{
+      color: antiquewhite;
     }
 
     .grid {
