--- a/src/components/Profil/EditAnnonce/EditAnnonce.scss
+++ b/src/components/Profil/EditAnnonce/EditAnnonce.scss
@@ -34,16 +34,19 @@
   &__form {
     width: 100%;
     justify-content: center;
-    height: 47%;
+    height: 500px;
     background-image: url('../../../assets/img/background-images/Designer.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     form {
       display: flex;
-      gap: 10px;
+      gap: 50px;
       margin-top: 25px;
       flex-wrap: wrap;
       background-color: transparent;
@@ -53,6 +56,14 @@
       border-radius: 10px;
     }
   }
+}
+
+.edit .edit__form-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.5em 0;
+  gap: 10px;
 }
 
 .edit__profile-card-buttons button,
@@ -98,7 +109,7 @@
   gap: 10px;
   flex-wrap: wrap;
   margin: 0 auto;
-  height: 100%;
+  height: 80%;
 }
 
 .edit__form-button {
@@ -158,6 +169,10 @@ form textarea {
   border-radius: 5px;
   color: #fff;
   padding: 0.5em;
+}
+
+.edit__form-textarea {
+  height: 100px;
 }
 
 button {
